# aion

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  aion_out.hpp
benchmarks/: CMakeLists.txt
benchmarks/regex/: group_k.regex  group_p.regex  group_r.regex  group_s.regex  group_w.regex  shared_predicates.regex
benchmarks/results/: .gitkeep
benchmarks/results/20260313_193528/: analysis.md  latency_jitter.csv  latency_nojitter.csv  summary.csv  summary.md  throughput_jitter.json  throughput_nojitter.json
benchmarks/scripts/: run_synthetic.sh  summarize_results.py
benchmarks/src/common/: bench_common.cpp  bench_common.hpp  hand_baselines.hpp  throughput_helpers.hpp
benchmarks/src/latency/: group_k_jitter.cpp  group_k_nojitter.cpp  group_w_jitter.cpp  group_w_nojitter.cpp  groups.hpp  latency_runner.hpp  main.cpp
benchmarks/src/throughput/: group_k_jitter.cpp  group_k_nojitter.cpp  group_p.cpp  group_r.cpp  group_r_nojitter.cpp  group_s_jitter.cpp  group_s_nojitter.cpp  group_w_jitter.cpp  group_w_nojitter.cpp
docs/: bench.md  bench_results_2026_03_13.md  grammar.md  roadmap.md  tests.md
docs/temp/: future.md  ir_architecture_and_pipeline.md
examples/: robot.regex  simple.regex  strategy.regex
src/: CMakeLists.txt
src/compiler/: CMakeLists.txt  main.cpp
src/compiler/analysis/: alphabet.cpp  alphabet.cppm  analysis.cppm  minimizer.cppm  symbol_table.cppm
src/compiler/automata/: automata.cppm  glushkov.cpp  glushkov.cppm  nfa.cppm  partitioner.cppm
src/compiler/codegen/: avx2.cppm  codegen.cppm  codegenstrategy.cppm  cpp_emitter.cppm  emitter.cpp  emitter.cppm  eventgen.cpp  eventgen.cppm  predicategen.cpp  predicategen.cppm  regexgen.cpp  regexgen.cppm  scalar.cpp  scalar.cppm
src/compiler/core/: common.cppm  config.cppm  core.cppm  diagnostics.cpp  diagnostics.cppm  symbol_table.cppm
src/compiler/frontend/: ast.cppm  ast_dump.cpp  frontend.cppm  lexer.cpp  lexer.cppm  parser.cpp  parser.cppm  parser_event.cpp  parser_pred.cpp  parser_regex.cpp  symbol_table.cpp  symbol_table.cppm
src/runtime/: CMakeLists.txt  backend_avx2.cppm  bitsets.hpp  concepts.hpp  engine.hpp  runtime.cppm
src/utils/: CMakeLists.txt  argparser.cppm  utils.cppm
tests/: CMakeLists.txt
tests/contract/: contract_cli_logging_tests.cpp  contract_dump_tests.cpp  contract_pipeline_tests.cpp
tests/e2e/: e2e_compiler_tests.cpp
tests/e2e/cases/: bool_string_literal.regex  invalid_regex_recovery.regex  missing_event.regex  multi_error.regex  regression_operator_errors.regex  valid_basic.regex
tests/semantic/: semantic_validity_tests.cpp
tests/semantic/cases/: multi_regex.regex  nullable_star.regex  predicate_precedence.regex  union_basic.regex  wildcard_concat.regex
tests/semantic/oracle_py/: semantic_oracle.py
tests/unit/: analysis_alphabet_tests.cpp  automata_glushkov_tests.cpp  frontend_lexer_tests.cpp  frontend_parser_tests.cpp  frontend_symbol_table_tests.cpp
